--- a/index.html
+++ b/index.html
@@ -66,71 +66,73 @@
         
         <div class="menu_content">
             <ul>
-                <li><a href="#">TIME SERIES REVIEW</a></li>
-                <li><a href="#">TOP ROOT CAUSES</a></li>
-                <li><a href="#">MANAGE AND DETECT</a></li>
+                <li><a href="#time_series_review">TIME SERIES REVIEW</a></li>
+                <li><a href="#top_root_causes">TOP ROOT CAUSES</a></li>
+                <li><a href="#manage_and_detect">MANAGE AND DETECT</a></li>
             </ul>
         </div>
 
-        <section class="section_landing_page">
-            <div class="row">
-                <div class="flexbox_container">
-                    <div class="flex_child flex_xs_grid_2_12 img_text_content">
-                        <img src="images/time_series.jpg" alt="panel 1">
-                    </div>
-                    <div class="flex_child flex_xs_grid_2_12 landing_text_wrapper">
-                        <div class="flexbox_container_center">
-                            <div class="flex_child">
-                                <div class="landing_text_content">
-                                    <h3>Review your server incidents by time series and suspicious data</h3>
-                                    <p>Our machine learning engine empowers your server incidents to be reviewed in a manageable and actionable view.</p>
+        <div class="show_process_wrapper">
+            <section id="time_series_review" class="section_landing_page">
+                <div class="row">
+                    <div class="flexbox_container">
+                        <div class="flex_child flex_xs_grid_2_12 img_text_content">
+                            <img src="images/time_series.jpg" alt="panel 1">
+                        </div>
+                        <div class="flex_child flex_xs_grid_2_12 landing_text_wrapper">
+                            <div class="flexbox_container_center">
+                                <div class="flex_child">
+                                    <div class="landing_text_content">
+                                        <h3>Review your server incidents by time series and suspicious data</h3>
+                                        <p>Our machine learning engine empowers your server incidents to be reviewed in a manageable and actionable view.</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
 
-        <section class="section_landing_page">
-            <div class="row">
-                <div class="flexbox_container">
-                    <div class="flex_child flex_xs_grid_2_12 img_text_content swap_right_col">
-                        <img src="images/top_root.jpg" alt="panel 1">
-                    </div>
-                    <div class="flex_child flex_xs_grid_2_12 landing_text_wrapper swap_left_col">
-                        <div class="flexbox_container_center">
-                            <div class="flex_child">
-                                <div class="landing_text_content">
-                                    <h3>Find the most suspicious data for troubleshooting</h3>
-                                    <p>OWe learn from your data and analyze the top root causetime candidates for you to review. Save hours of for troubleshooting.</p>
+            <section id="top_root_causes" class="section_landing_page">
+                <div class="row">
+                    <div class="flexbox_container">
+                        <div class="flex_child flex_xs_grid_2_12 img_text_content swap_right_col">
+                            <img src="images/top_root.jpg" alt="panel 1">
+                        </div>
+                        <div class="flex_child flex_xs_grid_2_12 landing_text_wrapper swap_left_col">
+                            <div class="flexbox_container_center">
+                                <div class="flex_child">
+                                    <div class="landing_text_content">
+                                        <h3>Find the most suspicious data for troubleshooting</h3>
+                                        <p>OWe learn from your data and analyze the top root causetime candidates for you to review. Save hours of for troubleshooting.</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
 
-        <section class="section_landing_page">
-            <div class="row">
-                <div class="flexbox_container">
-                    <div class="flex_child flex_xs_grid_2_12 img_text_content">
-                        <img src="images/time_series.jpg" alt="panel 1">
-                    </div>
-                    <div class="flex_child flex_xs_grid_2_12 landing_text_wrapper">
-                        <div class="flexbox_container_center">
-                            <div class="flex_child">
-                                <div class="landing_text_content">
-                                    <h3>Easy to manage, smart in detection</h3>
-                                    <p>Manage all servers with transparency, and get to detect all possible factors that may endanger your on-premise services.</p>
+            <section id="manage_and_detect" class="section_landing_page">
+                <div class="row">
+                    <div class="flexbox_container">
+                        <div class="flex_child flex_xs_grid_2_12 img_text_content">
+                            <img src="images/time_series.jpg" alt="panel 1">
+                        </div>
+                        <div class="flex_child flex_xs_grid_2_12 landing_text_wrapper">
+                            <div class="flexbox_container_center">
+                                <div class="flex_child">
+                                    <div class="landing_text_content">
+                                        <h3>Easy to manage, smart in detection</h3>
+                                        <p>Manage all servers with transparency, and get to detect all possible factors that may endanger your on-premise services.</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
+        </div>
 
         <section class="disclaimer_section">
             <div class="container">
