--- a/file-upload.html
+++ b/file-upload.html
@@ -61,17 +61,57 @@
             <div class="sidebar-nav">
                 <div class="main-sidenav">
                     <ul>
-                        <li><a href="file-upload.html"><i class="fa fa-upload"></i>file upload</a></li>
-                        <li><a href="upload-record.html"><i class="fa fa-files-o"></i>upload record</a></li>
-                        <li><a href="model-manager.html"><i class="fa fa-gears"></i>model manager</a></li>
-                        <li><a href="record-history.html"><i class="fa fa-file-text-o"></i>Record History</a></li>
+                        <li>
+                          <a href="upload-record.html">
+                            <span class="fa fa-files-o fa-nav" data-toggle="tooltip" data-placement="right" title="Upload Record"></span>
+                            <span class="text_nav"><i class="fa fa-files-o"></i>upload record</span>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="model-manager.html">
+                            <span class="fa fa-gears fa-nav" data-toggle="tooltip" data-placement="right" title="Model Manager"></span>
+                            <span class="text_nav"><i class="fa fa-gears"></i>model manager</span>
+                          </a>
+                          </li>
+                        <li>
+                          <a href="record-history.html">
+                            <span class="fa fa-file-text-o fa-nav" data-toggle="tooltip" data-placement="right" title="Record History"></span>
+                            <span class="text_nav"><i class="fa fa-file-text-o"></i>Record History</span>
+                          </a>
+                        </li>
                     </ul>
                 </div>
+            </div>
+
+            <div class="bottom_nav">
+              <a class="hide_navigation">Hide Menu <i class="fa fa-angle-double-left"></i></a>
             </div>
         </div>
 
         <div class="main_container">
- 
+            <div class="onboarding_steps">
+                <div class="onboarding_prog"></div>
+                <ul>
+                <li class="active active_step">
+                    <label>STEP 1</label>
+                    <a href="#"></a>
+                    <span>Train &amp; Predict</span>
+                </li>
+
+                <li class="">
+                    <label>STEP 2</label>
+                    <a href="#"></a>
+                    <span>Result Review</span>
+                </li>
+
+                <li class="">
+                    <label>STEP 3</label>
+                    <a href="#"></a>
+                    <span>Root cause analysis and report output.</span>
+                </li>
+              </ul>
+            </div>
+
             <div class="file_upload_section">
                 <div class="alert alert-info alert-count alert-dismissible fade show" role="alert">
                   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -95,7 +135,15 @@
                                 <label for="file">Select file</label>                   
                                 <input type="file" name="files" id="file">
                             </div>
-                            <p>File size limit : 1 GB</p>
+                            <p>File size limit : 1 GB <span id="select_file"></span></p>
+                        </div>
+                    </div>
+
+                    <div class="cta_action_innerWrapper" id="cta_action_innerWrapper">
+                        <a href="start-anomaly-detection.html" class="btn-link"><i class="fa fa-long-arrow-left"></i> Cancel</a>
+                        
+                        <div class="cta_actions">
+                            <button tye="submit" class="btn btn-blue btn-big" disabled>NEXT</button>
                         </div>
                     </div>
                 </form>
