--- a/login.html
+++ b/login.html
@@ -54,7 +54,7 @@
                     <h3>Sign In</h3>
                     <span>with your Anomaly Detection Account</span>
                 </div>
-                <form role="form" method="POST" action="file-upload.html">
+                <form role="form" method="" action="start-anomaly-detection.html">
                     <div class="form-group">
                         <label class="sr-only" for="email">Email Address</label>
                         <div class="input-group">
