--- a/results-decide.html
+++ b/results-decide.html
@@ -61,12 +61,30 @@
             <div class="sidebar-nav">
                 <div class="main-sidenav">
                     <ul>
-                        <li><a href="file-upload.html"><i class="fa fa-upload"></i>file upload</a></li>
-                        <li><a href="upload-record.html"><i class="fa fa-files-o"></i>upload record</a></li>
-                        <li><a href="model-manager.html"><i class="fa fa-gears"></i>model manager</a></li>
-                        <li><a href="record-history.html"><i class="fa fa-file-text-o"></i>Record History</a></li>
+                        <li>
+                          <a href="upload-record.html">
+                            <span class="fa fa-files-o fa-nav" data-toggle="tooltip" data-placement="right" title="Upload Record"></span>
+                            <span class="text_nav"><i class="fa fa-files-o"></i>upload record</span>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="model-manager.html">
+                            <span class="fa fa-gears fa-nav" data-toggle="tooltip" data-placement="right" title="Model Manager"></span>
+                            <span class="text_nav"><i class="fa fa-gears"></i>model manager</span>
+                          </a>
+                          </li>
+                        <li>
+                          <a href="record-history.html">
+                            <span class="fa fa-file-text-o fa-nav" data-toggle="tooltip" data-placement="right" title="Record History"></span>
+                            <span class="text_nav"><i class="fa fa-file-text-o"></i>Record History</span>
+                          </a>
+                        </li>
                     </ul>
                 </div>
+            </div>
+
+            <div class="bottom_nav">
+              <a class="hide_navigation">Hide Menu <i class="fa fa-angle-double-left"></i></a>
             </div>
         </div>
 
