--- a/start-anomaly-detection.html
+++ b/start-anomaly-detection.html
@@ -89,85 +89,9 @@
         </div>
 
         <div class="main_container">
-            <div class="onboarding_steps">
-                <div class="onboarding_prog"></div>
-                <ul>
-                <li class="active active_step">
-                    <label>STEP 1</label>
-                    <a href="#"></a>
-                    <span>Train &amp; Predict</span>
-                </li>
-
-                <li class="">
-                    <label>STEP 2</label>
-                    <a href="#"></a>
-                    <span>Result Review</span>
-                </li>
-
-                <li class="">
-                    <label>STEP 3</label>
-                    <a href="#"></a>
-                    <span>Root cause analysis and report output.</span>
-                </li>
-              </ul>
-            </div>
-
-            <div class="model_survey_section">
-                <div class="trainNewModel_wrapper">
-                    <span class="file-name"><i class="fa fa-file-text"></i> Anomaly.csv</span>
-                    <p>Sytem found these matched models for you. You can use previous model below</p>
-                    <span>or</span>
-                    <button id="trainNewModel" type="submit" class="btn btn-blue btn-big">TRAIN NEW MODEL</button> 
-                </div>
-
-                <form action="?">
-                    <div class="global-table">
-                        <h5 class="table-heading">List of previous model</h5>
-                        <table class="table table-striped example_datatable">
-                          <thead>
-                            <tr>
-                              <th>Model Name</th>
-                              <th>Time Created</th>
-                              <th>Description</th>
-                              <th>Action</th>
-                            </tr>
-                          </thead>
-                          <tbody>
-                            <tr>
-                              <td>Default Model Name 1</td>
-                              <td>1/18/18 9:46AM</td>
-                              <td><span class="ellipsis" data-toggle="tooltip" data-placement="bottom">This description are demo for long characters. You will read more by hovering using this tooltip.</span></td>
-                              <td><button class="decide">Decide</button></td>
-                            </tr>
-                            <tr>
-                              <td>Default Model Name 2</td>
-                              <td>1/18/18 9:50AM</td>
-                              <td><span class="ellipsis" data-toggle="tooltip" data-placement="bottom">demo description</span></td>
-                              <td><button class="decide">Decide</button></td>
-                            </tr>
-                            <tr>
-                              <td>Default Model Name 3</td>
-                              <td>1/19/18 10:46AM</td>
-                              <td><span class="ellipsis" data-toggle="tooltip" data-placement="bottom">demo description</span></td>
-                              <td><button class="decide">Decide</button></td>
-                            </tr>
-                          </tbody>
-                        </table>
-                    </div>
-                </form>
-            </div>
-
-            <div class="progressbar_wrapper none">
-                <span>Loading...</span>
-                <div class="progress">
-                  <!-- style="width: 67%;" --> 
-                  <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><!-- 67% --></div>
-                </div>
-
-                <div class="step_msg_wrapper">
-                    <h3>Step 1 </h3>
-                    <p><strong>Train &amp; Predict.</strong> The system now will scanning the file. It takes a several minute to analyze the files don't close this windows.</p>
-                </div>
+            
+            <div class="start_anomalyDetection_wrapper">
+                <a href="file-upload.html#cta_action_innerWrapper" class="btn btn-blue btn-big">START ANOMALY DETECTION</a>
             </div>
 
         </div>
