--- a/file-upload.html
+++ b/file-upload.html
@@ -34,9 +34,8 @@
 
     <nav class="main_nav">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand">
                 <img src="images/logo.png" alt="Trend Micro Logo">
-                <span>Anomaly Detection</span>
             </a>
 
             <ul>
@@ -48,7 +47,7 @@
                     <ul class="children">
                         <li><a href="#">User management</a></li>
                         <li><a href="#">Settings</a></li>
-                        <li><a href="#">Sign out</a></li>
+                        <li><a href="login.html">Sign out</a></li>
                     </ul>
                 </li>
                 <!-- <li><a href="#" class="btn btn-red">Sign Up</a></li> -->
@@ -111,7 +110,7 @@
                 </li>
               </ul>
             </div>
-
+            
             <div class="file_upload_section">
                 <div class="alert alert-info alert-count alert-dismissible fade show" role="alert">
                   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -135,15 +134,17 @@
                                 <label for="file">Select file</label>                   
                                 <input type="file" name="files" id="file">
                             </div>
-                            <p>File size limit : 1 GB <span id="select_file"></span></p>
+                            <p>File size limit : 1GB <span id="selected_file"></span></p>
                         </div>
                     </div>
 
                     <div class="cta_action_innerWrapper" id="cta_action_innerWrapper">
-                        <a href="start-anomaly-detection.html" class="btn-link"><i class="fa fa-long-arrow-left"></i> Cancel</a>
+                        <div class="pull-left">
+                          <a href="start-anomaly-detection.html" class="btn btn-big">GO BACK</a>
+                        </div>
                         
-                        <div class="cta_actions">
-                            <button tye="submit" class="btn btn-blue btn-big" disabled>NEXT</button>
+                        <div class="pull-right">
+                            <button id="proceed_file_upload" tye="submit" class="btn btn-blue btn-big" disabled>NEXT</button>
                         </div>
                     </div>
                 </form>
