--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
     
     <nav class="main_nav">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="images/logo.png" alt="Trend Micro Logo">
                 <span>Anomaly Detection</span>
             </a>
@@ -79,7 +79,7 @@
                     </div>
 
                     <div class="cta_action_wrapper">
-                        <button type="submit" class="btn btn-blue block"><i class="fa fa-sign-in"></i> Sign in here</button>
+                        <input type="submit" class="btn btn-blue block" value="Sign In"></input>
                         <a class="btn-link" href="#">Forgot Your Password?</a>
                     </div>
                 </form>
