--- a/model-manager.html
+++ b/model-manager.html
@@ -34,9 +34,8 @@
 
     <nav class="main_nav">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand">
                 <img src="images/logo.png" alt="Trend Micro Logo">
-                <span>Anomaly Detection</span>
             </a>
 
             <ul>
@@ -48,7 +47,7 @@
                     <ul class="children">
                         <li><a href="#">User management</a></li>
                         <li><a href="#">Settings</a></li>
-                        <li><a href="#">Sign out</a></li>
+                        <li><a href="login.html">Sign out</a></li>
                     </ul>
                 </li>
                 <!-- <li><a href="#" class="btn btn-red">Sign Up</a></li> -->
@@ -133,9 +132,15 @@
                           </tbody>
                         </table>
                     </div>
+                    
+                    <div class="cta_action_innerWrapper cta_action_content">
+                        <div class="pull-left">
+                          <a href="file-upload.html" class="btn btn-big"><i class="fa fa-upload"></i> FILE UPLOAD</a>
+                        </div>
 
-                    <div class="cta_actions">
-                        <button class="btn btn-big btn-blue" id="update_modelManager">UPDATE</button>
+                        <div class="pull-right">
+                          <button class="btn btn-big btn-blue" id="update_modelManager">UPDATE</button>
+                        </div>
                     </div>
                 </form>
             </div>
