--- a/start-anomaly-detection.html
+++ b/start-anomaly-detection.html
@@ -34,9 +34,8 @@
 
     <nav class="main_nav">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand">
                 <img src="images/logo.png" alt="Trend Micro Logo">
-                <span>Anomaly Detection</span>
             </a>
 
             <ul>
@@ -48,7 +47,7 @@
                     <ul class="children">
                         <li><a href="#">User management</a></li>
                         <li><a href="#">Settings</a></li>
-                        <li><a href="#">Sign out</a></li>
+                        <li><a href="login.html">Sign out</a></li>
                     </ul>
                 </li>
                 <!-- <li><a href="#" class="btn btn-red">Sign Up</a></li> -->
