--- a/upload-record.html
+++ b/upload-record.html
@@ -34,9 +34,8 @@
 
     <nav class="main_nav">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand">
                 <img src="images/logo.png" alt="Trend Micro Logo">
-                <span>Anomaly Detection</span>
             </a>
 
             <ul>
@@ -48,7 +47,7 @@
                     <ul class="children">
                         <li><a href="#">User management</a></li>
                         <li><a href="#">Settings</a></li>
-                        <li><a href="#">Sign out</a></li>
+                        <li><a href="login.html">Sign out</a></li>
                     </ul>
                 </li>
                 <!-- <li><a href="#" class="btn btn-red">Sign Up</a></li> -->
@@ -111,28 +110,34 @@
                           <th><span class="ellipsis">Test123</span></th>
                           <td><span class="ellipsis">small_dataset.csv</span></td>
                           <td>1/22/2018 8:15:21 AM</td>
-                          <td><a href="anomaly-scan-result.html" class="decide">Analysis</a></td>
+                          <td><a href="anomaly-scan-result.html" class="decide">Select</a></td>
                         </tr>
                         <tr>
                           <th><span class="ellipsis">Test123</span></th>
                           <td><span class="ellipsis">small_dataset.csv</span></td>
                           <td>1/22/2018 8:15:21 AM</td>
-                          <td><a href="anomaly-scan-result.html" class="decide">Analysis</a></td>
+                          <td><a href="anomaly-scan-result.html" class="decide">Select</a></td>
                         </tr>
                         <tr>
                           <th><span class="ellipsis">Test123</span></th>
                           <td><span class="ellipsis">small_dataset.csv</span></td>
                           <td>1/22/2018 8:15:21 AM</td>
-                          <td><a href="anomaly-scan-result.html" class="decide">Analysis</a></td>
+                          <td><a href="anomaly-scan-result.html" class="decide">Select</a></td>
                         </tr>
                         <tr>
                           <th><span class="ellipsis">Test123</span></th>
                           <td><span class="ellipsis">small_dataset.csv</span></td>
                           <td>1/22/2018 8:15:21 AM</td>
-                          <td><a href="anomaly-scan-result.html" class="decide">Analysis</a></td>
+                          <td><a href="anomaly-scan-result.html" class="decide">Select</a></td>
                         </tr>
                       </tbody>
                     </table>
+                </div>
+            </div>
+
+            <div class="cta_action_innerWrapper" id="cta_action_innerWrapper">
+                <div class="pull-left">
+                  <a href="file-upload.html" class="btn btn-big"><i class="fa fa-upload"></i> FILE UPLOAD</a>
                 </div>
             </div>
 
