--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     
     <nav class="main_nav">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="images/logo.png" alt="Trend Micro Logo">
                 <!-- <span>Anomaly Detection</span> -->
             </a>
