--- a/view-results.html
+++ b/view-results.html
@@ -88,30 +88,8 @@
         </div>
 
         <div class="main_container">
-            <div class="onboarding_steps">
-                <div class="onboarding_prog"></div>
-                <ul>
-                <li class="active">
-                    <label>STEP 1</label>
-                    <a href="#"></a>
-                    <span>Train &amp; Predict</span>
-                </li>
 
-                <li class="active">
-                    <label>STEP 2</label>
-                    <a href="#"></a>
-                    <span>Result Review</span>
-                </li>
-
-                <li class="active active_step">
-                    <label>STEP 3</label>
-                    <a href="#"></a>
-                    <span>Root cause analysis and report output.</span>
-                </li>
-              </ul>
-            </div>
-
-            <div class="model_survey_section result_wrapper">
+            <div class="model_survey_section">
               
               <div class="trainNewModel_wrapper">
                   <div class="modelname_heading">
@@ -123,7 +101,8 @@
                     <label class="mr-sm-2" for="inlineFormCustomSelect">Analysis time at</label>
                     <select class="custom-select mb-2 mr-sm-2 mb-sm-0" id="inlineFormCustomSelect">
                       <option disabled>Choose time</option>
-                      <option value="1" selected>1/25/2018 7:53:37 AM</option>
+                      <option value="2" selected>1/28/2018 9:30:20 AM</option>
+                      <option value="1">1/25/2018 7:53:37 AM</option>
                     </select>
 
                     <button type="submit" class="btn btn-blue">Show Incident</button>
@@ -131,7 +110,7 @@
               </div>
 
               <div class="collapse_holder">
-                <h3>[Analysis at : 1/25/2018 7:53:37 AM]</h3>
+                <h3>[Analysis at : 1/28/2018 9:30:20 AM]</h3>
                 <!-- <a href="javascript:void(0)" class="collapse_all"><i class="fa fa-plus"></i> Collapse All</a> -->
               </div>
 
@@ -358,12 +337,6 @@
                     </div>
                   </div>
                 </div> <!-- table_connected_wrapper -->
-              </div>
-
-              <div class="cta_action_innerWrapper" id="cta_action_innerWrapper">
-                  <div class="pull-left">
-                    <a href="file-upload.html" class="btn btn-big"><i class="fa fa-upload"></i> FILE UPLOAD</a>
-                  </div>
               </div>
 
             </div><!-- end of model_survey_section -->
