--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
-
 </head>
 <body>
     
@@ -66,10 +65,16 @@
         
         <div class="menu_content">
             <ul>
-                <li><a href="#time_series_review">TIME SERIES REVIEW</a></li>
-                <li><a href="#top_root_causes">TOP ROOT CAUSES</a></li>
-                <li><a href="#manage_and_detect">MANAGE AND DETECT</a></li>
+                <li><a data-href="#time_series_review">TIME SERIES REVIEW</a></li>
+                <li><a data-href="#top_root_causes">TOP ROOT CAUSES</a></li>
+                <li><a data-href="#manage_and_detect">MANAGE AND DETECT</a></li>
             </ul>
+        </div>
+
+        <div class="homepage_arrow">
+            <a class="scroll_down" data-href="#time_series_review">
+                <img src="images/arrow_down.png" alt="arrow_down">
+            </a>
         </div>
 
         <div class="show_process_wrapper">
@@ -83,6 +88,7 @@
                             <div class="flexbox_container_center">
                                 <div class="flex_child">
                                     <div class="landing_text_content">
+                                        <h2>TIME SERIES REVIEW</h2>
                                         <h3>Review your server incidents by time series and suspicious data</h3>
                                         <p>Our machine learning engine empowers your server incidents to be reviewed in a manageable and actionable view.</p>
                                     </div>
@@ -103,6 +109,7 @@
                             <div class="flexbox_container_center">
                                 <div class="flex_child">
                                     <div class="landing_text_content">
+                                        <h2>TOP ROOT CAUSES</h2>
                                         <h3>Find the most suspicious data for troubleshooting</h3>
                                         <p>OWe learn from your data and analyze the top root causetime candidates for you to review. Save hours of for troubleshooting.</p>
                                     </div>
@@ -123,6 +130,7 @@
                             <div class="flexbox_container_center">
                                 <div class="flex_child">
                                     <div class="landing_text_content">
+                                        <h2>MANAGE AND DETECT</h2>
                                         <h3>Easy to manage, smart in detection</h3>
                                         <p>Manage all servers with transparency, and get to detect all possible factors that may endanger your on-premise services.</p>
                                     </div>
