--- a/anomaly-scan-result.html
+++ b/anomaly-scan-result.html
@@ -234,7 +234,7 @@
                         </div>
 
                         <div class="pull-right">
-                          <button id="view_results" class="btn btn-big btn-blue" disabled>SUBMIT</button>
+                          <button id="view_results" class="btn btn-big btn-blue" disabled>NEXT</button>
                         </div>
                     </div>
 
