--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <div class="row">
                     <div class="flexbox_container">
                         <div class="flex_child flex_xs_grid_2_12 img_text_content">
-                            <img src="images/3rd.jpg" alt="panel 1">
+                            <img src="images/manage-and-detect.jpg" alt="panel 1">
                         </div>
                         <div class="flex_child flex_xs_grid_2_12 landing_text_wrapper">
                             <div class="flexbox_container_center">
