--- a/start-anomaly-detection.html
+++ b/start-anomaly-detection.html
@@ -90,7 +90,7 @@
         <div class="main_container">
             
             <div class="start_anomalyDetection_wrapper">
-                <a href="file-upload.html#cta_action_innerWrapper" class="btn btn-blue btn-big">START ANOMALY DETECTION</a>
+                <a href="file-upload.html" class="btn btn-blue btn-big">START ANOMALY DETECTION</a>
             </div>
 
         </div>
