--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="container">
                 <div class="landing_page_header_container">
                     <h5>ANOMALY DETECTION SERVICE</h5>
-                    <h2>Understand Your Hardware Issues, <br> Ahead of Anyone</h2>
+                    <h2>Understand Your Hardware <br> Issues, Ahead of Anyone</h2>
                     <div class="cta_wrapper">
                         <a href="#" class="btn btn-big">TRY IT FOR FREE</a>
                         <span class="shadow"></span>
