--- a/file-upload.html
+++ b/file-upload.html
@@ -94,7 +94,7 @@
                 <li class="active active_step">
                     <label>STEP 1</label>
                     <a href="#"></a>
-                    <span>Train &amp; Predict</span>
+                    <span>Upload & Train</span>
                 </li>
 
                 <li class="">
