--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                     <div class="landing_text_content">
                                         <h2>TOP ROOT CAUSES</h2>
                                         <h3>Find the most suspicious data for troubleshooting</h3>
-                                        <p>OWe learn from your data and analyze the top root causetime candidates for you to review. Save hours of for troubleshooting.</p>
+                                        <p>We learn from your data and analyze the top root cause candidates for you to review. Save hours of time for troubleshooting.</p>
                                     </div>
                                 </div>
                             </div>
