--- a/model-survey.html
+++ b/model-survey.html
@@ -94,7 +94,7 @@
                 <li class="active active_step">
                     <label>STEP 1</label>
                     <a href="#"></a>
-                    <span>Train &amp; Predict</span>
+                    <span>Upload & Train</span>
                 </li>
 
                 <li class="">
@@ -199,7 +199,7 @@
 
                 <div class="step_msg_wrapper">
                     <h3>Step 1 </h3>
-                    <p><strong>Train &amp; Predict.</strong> The system now will scanning the file. It takes a several minute to analyze the files don't close this windows.</p>
+                    <p><strong>Upload & Train.</strong> The system now will scanning the file. It takes a several minute to analyze the files don't close this windows.</p>
                 </div>
             </div>
 
