--- a/model-survey.html
+++ b/model-survey.html
@@ -83,7 +83,7 @@
             </div>
 
             <div class="bottom_nav">
-              <a class="hide_navigation">Hide Menu <i class="fa fa-angle-double-left"></i></a>
+              <a class="hide_navigation">Collapse Sidebar <i class="fa fa-angle-double-left"></i></a>
             </div>
         </div>
 
