--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="row">
                     <div class="flexbox_container">
                         <div class="flex_child flex_xs_grid_2_12 img_text_content">
-                            <img src="images/time_series.jpg" alt="panel 1">
+                            <img src="images/time_series.png" alt="panel 1">
                         </div>
                         <div class="flex_child flex_xs_grid_2_12 landing_text_wrapper">
                             <div class="flexbox_container_center">
@@ -103,7 +103,7 @@
                 <div class="row">
                     <div class="flexbox_container">
                         <div class="flex_child flex_xs_grid_2_12 img_text_content swap_right_col">
-                            <img src="images/top_root.jpg" alt="panel 1">
+                            <img src="images/top_root.png" alt="panel 1">
                         </div>
                         <div class="flex_child flex_xs_grid_2_12 landing_text_wrapper swap_left_col">
                             <div class="flexbox_container_center">
@@ -124,7 +124,7 @@
                 <div class="row">
                     <div class="flexbox_container">
                         <div class="flex_child flex_xs_grid_2_12 img_text_content">
-                            <img src="images/manage-and-detect.jpg" alt="panel 1">
+                            <img src="images/manage-and-detect.png" alt="panel 1">
                         </div>
                         <div class="flex_child flex_xs_grid_2_12 landing_text_wrapper">
                             <div class="flexbox_container_center">
